--- a/src/antora.yml
+++ b/src/antora.yml
@@ -1,6 +1,6 @@
 name: book
-title: System Level
-version: 0.9.0
+title: Babashka
+version: master
 start_page: book.adoc
 nav:
   - modules/ROOT/nav.adoc
